--- a/app/index.html
+++ b/app/index.html
@@ -11,7 +11,9 @@
         <meta name="viewport" content="width=device-width">
         <link rel="icon" type="image/png" href="images/world_leaf_16.png"/>
 
+        <!-- build:css() -->
         <link rel="stylesheet" href="styles/wire.css" />
+        <!-- endbuild -->
         <!-- bower:css -->
         <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
         <link rel="stylesheet" href="bower_components/crisma-scenario-list-widget-angular/dist/styles/crisma-scenario-list-widget-angular.css" />
@@ -44,7 +46,7 @@
         <script src="bower_components/crisma-scenario-list-widget-angular/dist/scripts/crisma-scenario-list-widget-angular-tpl.js"></script>
         <!-- endbower -->
 
-        <!-- build:js({.tmp,app}) scripts/crisma-scenario-list-widget-wirecloud.min.js -->
+        <!-- build:js() -->
         <script src="scripts/wire.js"></script>
         <!-- endbuild -->
     </body>
